# owui_doc_ingestion

./: .gitignore  README.md  dvc.yaml  pyproject.toml  template.env  vielses_assist_case.md
documentation/: findings_vielse.md  tika_html2md.md
scripts/: docling_owui_service_ingestion.py  tika_owui_service_ingestion.py
src/owui_doc_ingestion/doc_loaders/: docling.py  tika.py
src/owui_doc_ingestion/processing_metrics/: db.py
src/owui_doc_ingestion/utils/: doc_io.py  mime_type.py  urls.py
tests/: test_mime_type.py  test_page_count.py  test_set_url_usr_psw.py  test_tika_loader.py
