[project]
name = "owui-doc-ingestion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "html2text>=2025.4.15",
    "ipython>=9.3.0",
    "langchain-core>=0.3.66",
    "markdownify>=1.1.0",
    "pypandoc>=1.15",
    "pypdf>=5.6.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
